# betpredictor

./: .gitignore  .gitleaks.toml  README.md  debug_schedule.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
.github/workflows/: ci.yml
data/features/: base_feature.py  feature_pipeline.py
data/features/game_features/: context.py  matchup.py  odds.py
data/features/player_features/: batting.py  fielding.py  pitching.py  war.py
data/features/team_features/: schedule.py  team_features.py
data/loaders/: base_loader.py  game_loader.py  odds_loader.py  player_loader.py  team_loader.py
scripts/ci/: check_tracked_artifacts.py
src/: config.py  feature_preprocessing.py  utils.py
src/data/: database.py  feature_preprocessing.py
src/data/backtesting/: expected_return.py
src/data/features/: base_feature.py  feature_pipeline.py  feature_preprocessing.py  perspective.py
src/data/features/game_features/: context.py  odds.py
src/data/features/player_features/: batting.py  fielding.py  pitching.py  structured.py
src/data/features/team_features/: team_features.py
src/data/loaders/: base_loader.py  game_loader.py  odds_loader.py  player_loader.py  team_loader.py
src/data/models/: calibration.py  model_comparison.py  neural_network.py  two_head_nn.py  two_stage.py  xgboost_model.py
src/scrapers/: fangraphs_session.py  items.py  pipelines.py  schema.sql  settings.py
src/scrapers/spiders/: league_avg_stats.py  scrape_fg.py  scrape_fielding.py  scrape_lineups.py  scrape_odds.py  scrape_park_factor.py  scrape_stats.py
src/tools/: fetch_schedule.py  refresh_fangraphs_session.py  update_table_columns.py
tests/: conftest.py  test_database.py  test_model_comparison.py  test_neural_network.py  test_two_head_nn.py  test_xgboost_model.py
tests/assets/: synthetic_schema.sql
tests/features/: __init__.py  test_batting_features.py  test_context_features.py  test_feature_pipeline.py  test_feature_preprocessing.py  test_perspective.py  test_pitching_features.py  test_structured_player_features.py  test_team_features.py
tests/loaders/: test_game_loader.py  test_odds_loader.py  test_player_loader.py  test_team_loader.py
