[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "betpredictor"
version = "0.1.0"
description = "MLB betting predictions"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.6",
    "aiohttp>=3.13.2",
    "optuna>=4.5.0",
    "parquet>=1.3.1",
    "pyarrow>=21.0.0",
    "xgboost>=3.0.5",
    "scikit-learn>=1.7.1",
    "torch>=2.9",
    "torchvision>=0.24.0",
    "torchaudio>=2.9.0",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
testing = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "data*"]

[tool.setuptools.package-dir]
"" = "."
